--- a/src/azion/extended-components/_tabmenu.scss
+++ b/src/azion/extended-components/_tabmenu.scss
@@ -12,7 +12,7 @@
       }
       &.p-highlight {
         .p-menuitem-link {
-          color: var(--tab-menu-link) !important;
+          color: var(--highlight-tab-menu-link) !important;
           font-weight: 500 !important;
         }
       }
