--- a/src/azion/extended-components/_tabview.scss
+++ b/src/azion/extended-components/_tabview.scss
@@ -13,7 +13,7 @@
       }
       &.p-highlight {
         .p-tabview-nav-link {
-          color: #1e1e1e !important;
+          color: var(--highlight-tabview-nav-link) !important;
           font-weight: 700 !important;
         }
       }
